--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Starter kit for creating React and Express apps AndresValencia",
   "main": "server.js",
-  "homepage": "http://andresteccorp.club",
   "scripts": {
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "client-install": "cd client && npm install",
@@ -20,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-router": "0.0.1",
